# Desktop-Automation-Based-Icon-Grounding

./: .gitignore  README.md  config.py  logs.txt  main.py  output.txt  pyproject.toml  requirements.txt
automation/: __init__.py  keyboard_controller.py  mouse_controller.py  notepad_controller.py  window_manager.py
data/: __init__.py  api_client.py  fallback_data.json
grounding/: __init__.py  base_grounding.py  ocr_grounding.py  screenshot.py  template_grounding.py  vision_grounding.py
utils/: __init__.py  logger.py  retry.py  validators.py
